plugins {
    id 'java'
    id 'war'
    id 'groovy'
    id 'application'
    id 'org.springframework.boot' version "3.4.3"
    id("me.champeau.jmh") version "0.7.3"
}

apply plugin: 'io.spring.dependency-management'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor "org.openjdk.jmh:jmh-generator-annprocess:${jmhVersion}"
    providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')

    implementation libs.guava
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation "commons-io:commons-io:${apacheCommonsIOVersion}"
    implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
    implementation "com.mysql:mysql-connector-j:${mysqlConnectorVersion}"
    implementation 'org.apache.commons:commons-lang3:3.18.0'
    runtimeOnly("io.jsonwebtoken:jjwt-impl:${jjwtVersion}")
    runtimeOnly("io.jsonwebtoken:jjwt-orgjson:${jjwtVersion}")
    runtimeOnly("org.liquibase:liquibase-core:4.31.1")
    implementation("net.lbruun.springboot:preliquibase-spring-boot-starter:1.6.0")
    implementation("com.github.ben-manes.caffeine:caffeine:3.2.2")

    jmh 'org.openjdk.jmh:jmh-core'
    jmh libs.groovy
    jmh libs.spock.core
    jmh libs.junit

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation libs.groovy
    testImplementation libs.spock.core
    testImplementation "org.testcontainers:mysql:1.21.3"
    testImplementation('org.springframework.boot:spring-boot-starter-test:3.5.5') {
        exclude group: 'junit', module: 'junit'
    }
    testImplementation("org.spockframework:spock-spring:2.2-groovy-3.0")
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

compileJava {
    options.compilerArgs << "--add-modules=jdk.incubator.vector"
}

compileGroovy {
    options.compilerArgs << "--add-modules=jdk.incubator.vector"
}

compileTestGroovy {
    options.compilerArgs << "--add-modules=jdk.incubator.vector"
}

compileJmhGroovy {
    options.compilerArgs << "--add-modules=jdk.incubator.vector"
}

application {
    mainClass = 'io.jp.Main'
}

test {
    jvmArgs.add("--add-modules=jdk.incubator.vector")
    useJUnitPlatform()
}

jmh {
    jvmArgs.add("--add-modules=jdk.incubator.vector")
}